Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -213,6 +213,8 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 1em;
+
+  overflow: auto;
 }
 
 .Associates h1 {
